<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fav0"
        android:id="@+id/btn_fav0"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_fav1"
        android:layout_alignParentLeft="true"
        android:onClick="switchTimer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fav4"
        android:id="@+id/btn_fav4"
        android:layout_marginBottom="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fav2"
        android:id="@+id/btn_fav2"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_fav3"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fav1"
        android:id="@+id/btn_fav1"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_fav2"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fav3"
        android:id="@+id/btn_fav3"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_fav4"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_main"
        android:id="@+id/tv_fav"
        android:layout_above="@+id/btn_fav0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_foods"
        android:id="@+id/btn_foods"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="switchFoods"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_meals"
        android:id="@+id/btn_meals"
        android:layout_alignBottom="@+id/btn_foods"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="switchMeals"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_timer"
        android:id="@+id/tv_test"
        android:layout_alignBottom="@+id/btn_fav0"
        android:layout_alignRight="@+id/btn_meals"
        android:layout_alignEnd="@+id/btn_meals"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp" />

</RelativeLayout>
